fixed BOM image

--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -88,7 +88,7 @@
                 the same size to ensure easy integration with whatever our final decision is.
             </p>
             <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/bom.png" alt="Hardware Diagram">
+                <img class="zoomable-image" src="media/Hardware_Schematic/BOM.png" alt="Bill of materials img">
             </div>
 
             <p class="content-header"> Power Budget </p>
