Download link added

--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -17,6 +17,8 @@
             <p> My personal hardware schematic, made using Altium Designer, is split into 3 distinct pages.</p>
             <p> This choice was made to <u>clarify my subsystem functionality</u>, and to avoid overwhelming the reader.
             </p>
+            <a href="/media/Downloads/314PersonalBoard (2-21-2025).zip" download>Download the Altium Designer File</a>
+            <p></p>
         </div>
     </content-section>
 
@@ -111,6 +113,8 @@
             </p>
         </div>
     </div>
+
+    
 
 
     <script src="scripts.js" defer>
