Revised Bill of Materials

--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -89,8 +89,11 @@
                 they will be bulk-ordered to minimize the friction of ordering individual units. We will keep them at
                 the same size to ensure easy integration with whatever our final decision is.
             </p>
-            <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/BOM.png" alt="Bill of materials img">
+
+            <div style="position: relative; width: 85%; padding-top: 15%; margin:auto;">
+                <iframe src="https://onedrive.live.com/embed?resid=EFB59CC599CE24EF%21506248&authkey=%21AKZRtzgKRwCInaY&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0"
+                    scrolling="no">
+                </iframe>
             </div>
 
             <p class="content-header"> Power Budget </p>
@@ -114,12 +117,7 @@
         </div>
     </div>
 
-    
-
-
-    <script src="scripts.js" defer>
-
-    </script>
+    <script src="scripts.js" defer> </script>
 
 </body>
 
