--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -90,7 +90,7 @@
                 the same size to ensure easy integration with whatever our final decision is.
             </p>
 
-            <div style="position: relative; width: 85%; padding-top: 15%; margin:auto;">
+            <div style="position: relative; width: 85%; padding-top: 15%; margin:auto; height: 15vh;">
                 <iframe src="https://onedrive.live.com/embed?resid=EFB59CC599CE24EF%21506248&authkey=%21AKZRtzgKRwCInaY&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0"
                     scrolling="no">
                 </iframe>
