--- a/Taskbar.html
+++ b/Taskbar.html
@@ -96,6 +96,9 @@
             <nav-button>
                 <a href="https://recpal.github.io/Group304EGR314.github.io/" class="nav-button-text"> Team Page </a>
             </nav-button>
+            <nav-button>
+                <a href="API.html" class="nav-button-text"> API </a>
+            </nav-button>
         </page-nav>
     </header>
 </body>
