--- a/API.html
+++ b/API.html
@@ -128,6 +128,12 @@
             (Headers/Footers)
         </span>
 
+        <div style="padding-bottom: 1vh;"></div>
+
+        <span>Including the headers/footers are <u>not required for the assignment</u>, but including them will provide
+            better reference information for both myself and my team during production. Therefor they will remain in
+            this document</span>
+
         <div style="padding-bottom: 2vh;"></div>
 
         <div style="padding: auto; align-content:center; width: 90vw; padding:0; margin:0;">
@@ -153,9 +159,8 @@
                         <td class="message-content"> [255] </td>
                         <td class="message-content"> 8 Bits [56 Bits Total] </td>
                         <td class="message-content"> Notifies subsystems that ready commands can be recieved </td>
-                        <td class="message-content"> <span><strong
-                                    class="common-message">[0x41][0x5a]</strong> [0x06][0x07][0xFF] <strong
-                                    class="common-message">[0x59][0x42]</strong></span> </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x06][0x07][0xFF] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
                         <td class="message-content"> TX </td>
@@ -164,9 +169,8 @@
                         <td class="message-content"> [255] </td>
                         <td class="message-content"> 8 Bits [56 Bits Total] </td>
                         <td class="message-content"> Tells all devices to start their send clock </td>
-                        <td class="message-content"> <span><strong
-                                    class="common-message">[0x41][0x5a]</strong> [0x06][0x10][0xFF] <strong
-                                    class="common-message">[0x59][0x42]</strong></span> </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x06][0x10][0xFF] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
                         <td class="message-content"> TX </td>
@@ -175,9 +179,8 @@
                         <td class="message-content"> [244] </td>
                         <td class="message-content"> 8 Bits [56 Bits Total] </td>
                         <td class="message-content"> Commands all devices to cease operation </td>
-                        <td class="message-content"> <span><strong
-                                    class="common-message">[0x41][0x5a]</strong> [0x06][0x10][0xF4] <strong
-                                    class="common-message">[0x59][0x42]</strong></span> </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x06][0x10][0xF4] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
                         <td class="message-content"> RX </td>
@@ -185,37 +188,50 @@
                         <td class="message-content"> uint_8 </td>
                         <td class="message-content"> [0] </td>
                         <td class="message-content"> 8 Bits [56 Bits Total]</td>
-                        <td class="message-content"> Indicates to master device that no new information is available </td>
-                        <td class="message-content"> <span><strong
-                            class="common-message">[0x41][0x5a]</strong> [0x08][0x6][0x00] <strong
-                            class="common-message">[0x59][0x42]</strong></span> </td>
+                        <td class="message-content"> Indicates to master device that no new information is available
+                        </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x08][0x6][0x00] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
                         <td class="message-content"> RX </td>
-                        <td class="message-content"> Airspeed </td>
+                        <td class="message-content"> True Airspeed </td>
                         <td class="message-content"> uint_8 </td>
                         <td class="message-content"> [0-255] </td>
                         <td class="message-content"> 8 Bits [56 Bits Total]</td>
                         <td class="message-content"> Airspeed reporting from Windspeed subsystem </td>
-                        <td class="message-content"> <span><strong
-                            class="common-message">[0x41][0x5a]</strong> [0x09][0x6][0x43] <strong
-                            class="common-message">[0x59][0x42]</strong></span> </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x09][0x6][0x43] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
-                        <td class="message-content"> Reset System </td>
+                        <td class="message-content"> RX </td>
+                        <td class="message-content"> Airspeed Target </td>
                         <td class="message-content"> uint_8 </td>
-                        <td class="message-content"> 0xAE </td>
-                        <td class="message-content"> 8 Bits </td>
-                        <td class="message-content"> Wifi System </td>
-                        <td class="message-content"> All Devices </td>
+                        <td class="message-content"> [0-100] </td>
+                        <td class="message-content"> 8 Bits [56 Bits Total]</td>
+                        <td class="message-content"> Airspeed dial target (Reported to web interface)</td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x09][0x6][0x42] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                     <tr>
-                        <td class="message-content"> Emergency Stop </td>
+                        <td class="message-content"> RX </td>
+                        <td class="message-content"> Pitch Target </td>
                         <td class="message-content"> uint_8 </td>
-                        <td class="message-content"> 0x99 </td>
-                        <td class="message-content"> 8 Bits </td>
-                        <td class="message-content"> Wifi System </td>
-                        <td class="message-content"> All Devices </td>
+                        <td class="message-content"> [101-201] </td>
+                        <td class="message-content"> 8 Bits [56 Bits Total]</td>
+                        <td class="message-content"> Pitch dial target </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x08][0x6][0x8E] <strong class="common-message">[0x59][0x42]</strong></span> </td>
+                    </tr>
+                    <tr>
+                        <td class="message-content"> RX </td>
+                        <td class="message-content"> Current Fan Speed </td>
+                        <td class="message-content"> uint_8 </td>
+                        <td class="message-content"> [0-100] </td>
+                        <td class="message-content"> 8 Bits [56 Bits Total]</td>
+                        <td class="message-content"> Current Fan Speed (Reported to web interface) </td>
+                        <td class="message-content"> <span><strong class="common-message">[0x41][0x5a]</strong>
+                                [0x08][0x6][0x8E] <strong class="common-message">[0x59][0x42]</strong></span> </td>
                     </tr>
                 </tbody>
             </table>
