--- a/API.html
+++ b/API.html
@@ -125,7 +125,7 @@
 
         <span>For the "Example" section, values listed in <strong class="common-message">BLUE</strong> are common for
             all messages
-            (Headers/Footers)
+            (Headers/Footers).
         </span>
 
         <div style="padding-bottom: 1vh;"></div>
