Deploys are dead :(

--- a/API.html
+++ b/API.html
@@ -72,7 +72,7 @@
 
         All messages are also recieved by the wifi system for live-display to the operator via the
         web-interface. All messages can also be spoofed by the web-interface to overwrite command inputs by
-        the user
+        the user.
 
         <div style="padding-bottom: 2vw;"></div>
 
