--- a/API.html
+++ b/API.html
@@ -132,7 +132,7 @@
 
         <span>Including the headers/footers are <u>not required for the assignment</u>, but including them will provide
             better reference information for both myself and my team during production. Therefor they will remain in
-            this document.</span> 
+            this document</span> 
 
         <div style="padding-bottom: 2vh;"></div>
 
