Final API CHanges

--- a/API.html
+++ b/API.html
@@ -136,6 +136,8 @@
 
         <div style="font-size: 1.7em;"> Example Key: </div>
 
+        <div style="padding-bottom: 1vh;"></div>
+
         <span> <strong class="common-message">BLUE</strong> : All common message components (IE Headers/Footers)
         </span>
 
