--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -53,24 +53,31 @@
             <p class="content-header"> Power System Layout </p>
             <p class="content-text">
                 Due to the requirements of the project, two power systems are required. One power system is for the
-                ESP32, while the 5v system is used to drive the pulse pins on the stepper motor driver.
-                It would be considerably easier to move to a 5v microcontroller, but this solution
-                is a side-effect of the class-set project requirements.
+                ESP32, while the 5v system is used to drive the pulse pins on the stepper motor driver. After my team
+                swap I repurposed this system
+                to operate as a 5v software SPI driver for an external display. This did not require any hardware
+                modifications to function.
             </p>
             <div class="zoomable-container">
                 <img class="zoomable-image" src="media/Hardware_Schematic/power-system.png" alt="Hardware Diagram">
             </div>
         </div>
-
     </div>
 
     <div id="dropdown3" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
-            <p class="content-header"> Motor Driver and I2C IO expander </p>
+            <p class="content-header"> Motor Driver</p>
             <p class="content-text">
                 My board needs to interface with a 24v stepper motor, driven by an external driver. This driver requires
                 a 5v magnitude for the pulse, which cannot be provided by the 3.3v microcontroller. My solution is
                 to use MOSFETs with a trigger at 0.7v to activate the 5v pulse, which in turn drives the motor driver.
+                The original project design involved driving a stepper motor using these GPIO pins, but after being
+                moved to the new team my subsystem was repurposed to utilize
+                software-based SPI. This adaptation did not hinder the functionality of this subsystem, and was still
+                driven using the same hardware. While this was almost certainly
+                not necessary given the new requirements, the board was already manufactured and making modifications
+                would not have provided any improved functionality given the time
+                constraints.
             </p>
             <div class="zoomable-container">
                 <img class="zoomable-image" src="media/Hardware_Schematic/motor-system.png" alt="Hardware Diagram">
@@ -91,7 +98,9 @@
             </p>
 
             <div style="position: relative; width: 85%; padding-top: 15%; margin:auto; height: 15vh;">
-                <iframe src="https://onedrive.live.com/embed?resid=EFB59CC599CE24EF%21506248&authkey=%21AKZRtzgKRwCInaY&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0"
+                <iframe
+                    src="https://onedrive.live.com/embed?resid=EFB59CC599CE24EF%21506248&authkey=%21AKZRtzgKRwCInaY&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True"
+                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0"
                     scrolling="no">
                 </iframe>
             </div>
@@ -100,15 +109,14 @@
             <p class="content-text">
                 To ensure sufficient power flow from the supply to adequately power all required hardware, I have
                 generated this power budget showing the allocation required
-                to drive all necessary hardware. Due to the majority of my power being used from an external supply to
-                drive the stepper motor, the only components with major power
-                draw are the ESP32, particularly during wifi transmission and SSID detection.
+                to drive all necessary hardware. The screen has rather minor power draw, but to provide ample safety margin I elected to maintain the 
+                750mA fuse, so while the power is overspecced for the setup, it is a completely valid option for this setup.
             </p>
             <p class="content-text">
                 I have elected to only show components that actually have a notable power draw to minimize the work
                 required to streamline the document, especially given the quantity of individual components.
             </p>
-            <img style="max-width: max-content; max-height: max-content; margin:auto; margin-bottom: 2vh;"
+            <img style="width: 80%; max-height: max-content; margin:auto; margin-bottom: 2vh;"
                 src="media/Hardware_Schematic/power-budget.png" alt="Power Budget Image">
             <p class="content-text">
                 The output of my voltage regulator is 500mA at 3.3v. Which means that it is capable of powering all
